Fix CardScroll scrollbar hiding

--- a/src/CardScroll/index.css
+++ b/src/CardScroll/index.css
@@ -1,13 +1,18 @@
 .CardScroll {
+  overflow-y: hidden;
+}
+.CardScroll__inner {
   display: flex;
   flex-wrap: nowrap;
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
+  padding-bottom: 20px;
+  margin-bottom: -20px;
 }
-.CardScroll::-webkit-scrollbar {
+.CardScroll__inner::-webkit-scrollbar {
   display: none;
 }
-.CardScroll > * {
+.CardScroll__inner > * {
   flex: 0 0 auto;
   margin-right: 20px;
 }
